--- a/lab5_p2/my-app/package.json
+++ b/lab5_p2/my-app/package.json
@@ -1,15 +1,32 @@
 {
-  "name": "my-app",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+  "DEFAULT code": 
+  {
+	  "name": "my-app",
+	  "version": "1.0.0",
+	  "scripts": {
+	    "start": "vite",
+	    "build": "vite build",
+	    "serve": "vite preview"
+	  },
+	  "devDependencies": {
+	    "vite": "^5.1.4"
+	  },
+	  "dependencies": {
+	    "ol": "latest"
+	  }
+  }
+}
+
+{
+  "name": "overlay",
+  "dependencies": {
+    "ol": "8.1.0"
   },
   "devDependencies": {
-    "vite": "^5.1.4"
+    "vite": "^3.2.3"
   },
-  "dependencies": {
-    "ol": "latest"
+  "scripts": {
+    "start": "vite",
+    "build": "vite build"
   }
 }
