--- a/lab5_p2/my-app/package.json
+++ b/lab5_p2/my-app/package.json
@@ -1,26 +1,7 @@
 {
-  "DEFAULT code": 
-  {
-	  "name": "my-app",
-	  "version": "1.0.0",
-	  "scripts": {
-	    "start": "vite",
-	    "build": "vite build",
-	    "serve": "vite preview"
-	  },
-	  "devDependencies": {
-	    "vite": "^5.1.4"
-	  },
-	  "dependencies": {
-	    "ol": "latest"
-	  }
-  }
-}
-
-{
-  "name": "overlay",
+  "name": "geographic",
   "dependencies": {
-    "ol": "8.1.0"
+    "ol": "9.0.0"
   },
   "devDependencies": {
     "vite": "^3.2.3"
