--- a/lab5_p2/my-app/package.json
+++ b/lab5_p2/my-app/package.json
@@ -1,14 +1,17 @@
 {
   "name": "geographic",
   "dependencies": {
-    "ol": "9.0.0"
+    "mysql2": "^3.9.2",
+    "ol": "latest",
+    "string_decoder": "^1.3.0"
   },
   "devDependencies": {
     "vite": "^3.2.3"
   },
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "execute": "node --experimental-modules main.mjs"
   },
-  "type": ["modules", "my-sql"]
+  "type": "module"
 }
