colin's version attempt

--- a/lab5_p2/col_ver/package.json
+++ b/lab5_p2/col_ver/package.json
@@ -10,8 +10,7 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "vite build",
-    "execute": "node --experimental-modules main.mjs"
+    "build": "vite build"
   },
   "type": "module"
 }
