--- a/lab5_p2/col_ver/package.json
+++ b/lab5_p2/col_ver/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "start": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "execute": "node --experimental-modules main.mjs"
   },
   "type": "module"
 }
