--- a/lab5_p2/col-app/package.json
+++ b/lab5_p2/col-app/package.json
@@ -10,6 +10,9 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.3",
+    "mysql2": "^3.9.2",
     "ol": "latest"
   }
 }
